fix error reporting, adjust build output